--- a/vignettes/03_longevityTools_Overview/longevityTools.knit.html
+++ b/vignettes/03_longevityTools_Overview/longevityTools.knit.html
@@ -819,6 +819,16 @@ git commit -am "some edits"; git push -u origin master
 
 <div align="right">[Back to Table of Contents]()</div>
 
+<h2 id="building-and-checking-package">Building and checking package</h2>
+
+<p><code class="highlighter-rouge">sh
+R CMD build longevityTools # Run from parent directory of longevityTools directory
+R CMD check longevityTools_1.0.3.tar.gz
+install.package("longevityTools_1.0.3.tar.gz", repos=NULL, type="source")
+</code></p>
+
+<div align="right">[Back to Table of Contents]()</div>
+
 <h1 id="overview-of-object-clases-methods-and-functions">Overview of object clases, methods and functions</h1>
 
 <p>To be continued… [@Lamb2006-uv; @Peters2015-fc; @Sood2015-pb].</p>
