--- a/vignettes/02_Downloads/mydoc_downloads.html
+++ b/vignettes/02_Downloads/mydoc_downloads.html
@@ -21,6 +21,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/2.0.0/anchor.min.js"></script>
 <script src="../js/toc.js"></script>
 <script src="../js/customscripts.js"></script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <link rel="shortcut icon" href="../common_images/favicon.ico" type="image/x-icon">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,6 +37,7 @@
 
 
  
+
 
 <script>
   $(function () {
@@ -758,6 +760,9 @@ them are provided in the corresponding analysis vignettes.</p>
                 </div>
             </div>
 </footer>
+
+
+
 
             </div><!-- /.row -->
 
