--- a/title-checker.html
+++ b/title-checker.html
@@ -1017,8 +1017,26 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolsOverview - Analysis Tools for Longevity Research".</p>
+
+
 
 
 
@@ -1295,8 +1313,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Overview of object clases, methods and functions" does not match the page title "Overview of object clases, methods and functions".</p>
+
+
 
 
 
@@ -1573,6 +1595,8 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Funding" does not match the page title "Funding".</p>
 
@@ -1712,8 +1736,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "6. Version information" does not match the page title "Version information".</p>
+
+
 
 
 
@@ -2016,8 +2044,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eQTL - eSNP and GWAS Analysis".</p>
+
+
 
 
 
@@ -2294,8 +2326,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Getting Started" does not match the page title "Getting Started".</p>
+
+
 
 
 
@@ -2572,8 +2608,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Sample data from GTEx" does not match the page title "Sample data from GTEx".</p>
+
+
 
 
 
@@ -2850,8 +2890,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "7. SNP clumping using PLINK" does not match the page title "SNP clumping using PLINK".</p>
+
+
 
 
 
@@ -3128,8 +3172,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "9. Version information" does not match the page title "Version information".</p>
+
+
 
 
 
@@ -3364,8 +3412,147 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolse_DRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolseDRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+
+
 
 
 
@@ -3642,8 +3829,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Setup of working environment" does not match the page title "Setup of working environment".</p>
+
+
 
 
 
@@ -3920,8 +4111,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Pre-processing of CEL files" does not match the page title "Pre-processing of CEL files".</p>
+
+
 
 
 
@@ -4198,8 +4393,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "7. Connectivity maps enrichment analysis" does not match the page title "Connectivity maps enrichment analysis".</p>
+
+
 
 
 
@@ -4476,8 +4675,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "9. Age-disease network analysis" does not match the page title "Age-disease network analysis".</p>
+
+
 
 
 
@@ -4754,8 +4957,12 @@
 
 
 
+
+
 <hr/>
 <p>Problem: The sidebar item title "11. Version information" does not match the page title "Version information".</p>
+
+
 
 
 
@@ -5082,7 +5289,11 @@
 
 
 
+
+
 <hr/>
+
+
 
 
 
