--- a/title-checker.html
+++ b/title-checker.html
@@ -3550,7 +3550,7 @@
 
 
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolseDRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eDRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
 
 
 
