--- a/title-checker.html
+++ b/title-checker.html
@@ -2047,7 +2047,7 @@
 
 
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eQTL - eSNP and GWAS Analysis".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eQTL - eQTL, eSNP and GWAS Analysis".</p>
 
 
 
@@ -3317,141 +3317,6 @@
 
 <hr/>
 <p>Problem: The sidebar item title "10. References" does not match the page title "References".</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
