--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -50,9 +50,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 16 February, 2016</em></h4>
+<h4 class="date"><em>Last update: 06 March, 2016</em></h4>
 </div>
-<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.3</span></h4>
+<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.4</span></h4>
 
 <h1>Contents</h1>
 <div id="TOC">
@@ -108,7 +108,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <!---
 - Compile from command-line
-echo "rmarkdown::render('longevityTools_eDRUG.Rmd')" | R -slave; R CMD Stangle longevityTools_eDRUG.Rmd
+echo "rmarkdown::render('longevityTools_eDRUG.Rmd', clean=F)" | R -slave; R CMD Stangle longevityTools_eDRUG.Rmd
 
 - Commit to github
 git commit -am "some edits"; git push -u origin master
