--- a/mydoc/mydoc_longevityTools_eQTL_01.html
+++ b/mydoc/mydoc_longevityTools_eQTL_01.html
@@ -694,7 +694,10 @@ $('#toc').on('click', 'a', function() {
 
 <p>Last update: 06 March, 2016</p>
 
-<p>The single-page R markdown vignette of this workflow is <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">here</a></p>
+<p>Alternative formats of this vignette:
+<a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html"><code>Single-page .Rmd HTML</code></a>,
+<a href="https://raw.githubusercontent.com/tgirke/longevityTools/master/vignettes/longevityTools_eQTL.Rmd"><code>.Rmd</code></a>,
+<a href="https://raw.githubusercontent.com/tgirke/longevityTools/master/vignettes/longevityTools_eQTL.R"><code>.R</code></a></p>
 
 <h2 id="introduction">Introduction</h2>
 <p>This vignette is part of the NIA funded Longevity Genomics project. For more information on this project please visit its 
@@ -724,7 +727,7 @@ vignette can be found <a href="https://htmlpreview.github.io/?https://github.com
             <div class="row">
                 <div class="col-lg-12 footer">
                &copy;2016 UC Riverside. All rights reserved. <br />
-<p>Page last updated:</span> Sun Mar  6 13:09:00 2016<br/> Site last generated: Mar 6, 2016 <br />
+<p>Page last updated:</span> Sun Mar  6 19:48:46 2016<br/> Site last generated: Mar 6, 2016 <br />
 <p><img src="../common_images/company_logo.png/></p>
                 </div>
             </div>
