--- a/mydoc/mydoc_downloads.html
+++ b/mydoc/mydoc_downloads.html
@@ -703,6 +703,7 @@ them are provided in the corresponding analysis vignettes.</p>
       <li>MAS5 normalized expression data: <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/data/HG-U133A/all_mas5exprs.rds">HG-U133A</a>,
 <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/data/HT_HG-U133A/all_mas5exprs.rds">HT_HG-U133A</a>,
 <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/data/U133AAofAv2/all_mas5exprs.rds">U133AAofAv2</a></li>
+      <li>Annotation file for Affymetirx probe sets: <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/myAnnot.xls">myAnnot.xls</a></li>
       <li>DEG Results for 3,587 contrasts of 7,056 CEL files: <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degMA.xls">degMA.xls</a></li>
       <li>DEG overlaps with Peters et al. (2015): <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26490707.xls">degOL_PMID26490707.xls</a></li>
       <li>DEG overlaps with Sood et al. (2015): <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26343147.xls">degOL_PMID26343147.xls</a></li>
@@ -749,7 +750,7 @@ them are provided in the corresponding analysis vignettes.</p>
             <div class="row">
                 <div class="col-lg-12 footer">
                &copy;2016 UC Riverside. All rights reserved. <br />
-<p>Page last updated:</span> Thu Feb 11 21:16:00 2016<br/> Site last generated: Mar 8, 2016 <br />
+<p>Page last updated:</span> Thu Feb 11 21:16:00 2016<br/> Site last generated: Mar 15, 2016 <br />
 <p><img src="../common_images/company_logo.png/></p>
                 </div>
             </div>
