--- a/vignettes/longevityDrugs.html
+++ b/vignettes/longevityDrugs.html
@@ -106,7 +106,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
 <p>This vignette is part of the NIA funded Longevity Genomics project. For more information on this project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this vignette can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityDrugs.html">here</a>.</p>
-<p>The data package <code>longevityDrugs</code> contains molecular structures and annotation information of longevity-associated drugs (LADs). An iterative process will be used to assemble, update and curate this data set long-term <span class="citation">(Backman, Cao, and Girke 2011,Cao2008-zo)</span>. Most small molecules will be identified by integrating several large-scale community data sources such as data from drug databases (e.g. Drugbank), bioassay databases (e.g. PubChem Bioassay, ChEMBL), literature, drug-related gene expression fingerprints (e.g. LINCS), genetic (e.g. GWAS) and phenotype resources. This will also include nearest neighbors of LADs sharing with them structural, physicochemical or biological properties.</p>
+<p>The data package <code>longevityDrugs</code> contains molecular structures and annotation information of longevity-associated drugs (LADs). An iterative process will be used to assemble, update and curate this data set long-term <span class="citation">(Backman, Cao, and Girke 2011; Cao et al. 2008)</span>. Most small molecules will be identified by integrating several large-scale community data sources such as data from drug databases (e.g. Drugbank), bioassay databases (e.g. PubChem Bioassay, ChEMBL), literature, drug-related gene expression fingerprints (e.g. LINCS), genetic (e.g. GWAS) and phenotype resources. This will also include nearest neighbors of LADs sharing with them structural, physicochemical or biological properties.</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
@@ -173,6 +173,7 @@ plot(sdfset)</code></pre>
 <div class="references">
 <h1><span class="header-section-number">5</span> References</h1>
 <p>Backman, Tyler W H, Yiqun Cao, and Thomas Girke. 2011. “ChemMine Tools: an Online Service for Analyzing and Clustering Small Molecules.” <em>Nucleic Acids Res.</em> 39 (Web Server issue) (16~may): W486–91. doi:<a href="http://dx.doi.org/10.1093/nar/gkr320">10.1093/nar/gkr320</a>. <a href="http://dx.doi.org/10.1093/nar/gkr320">http://dx.doi.org/10.1093/nar/gkr320</a>.</p>
+<p>Cao, Yiqun, Anna Charisi, Li-Chang Cheng, Tao Jiang, and Thomas Girke. 2008. “ChemmineR: a Compound Mining Framework for R.” <em>Bioinformatics</em> 24 (15) (1~aug): 1733–1734. doi:<a href="http://dx.doi.org/10.1093/bioinformatics/btn307">10.1093/bioinformatics/btn307</a>. <a href="http://dx.doi.org/10.1093/bioinformatics/btn307">http://dx.doi.org/10.1093/bioinformatics/btn307</a>.</p>
 </div>
 </div>
 
