--- a/vignettes/longevityDrugs.html
+++ b/vignettes/longevityDrugs.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title">longevityDrugs: Database of Longevity-Associated Drugs (LAD)</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Tyler Backman, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 15 March, 2016</em></h4>
+<h4 class="date"><em>Last update: 16 March, 2016</em></h4>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.6</span></h4>
 
@@ -133,8 +133,11 @@ library(&quot;ChemmineR&quot;) </code></pre>
 </div>
 <div id="load-database" class="section level1">
 <h1><span class="header-section-number">3</span> Load database</h1>
-<pre class="r"><code>sdfset &lt;- read.SDFset(&quot;inst/ext/longevityDrugs.sdf&quot;)
-plot(sdfset)</code></pre>
+<pre class="r"><code>mypath &lt;- system.file(&quot;extdata&quot;, &quot;longevitydrugs.sdf&quot;, package=&quot;longevityTools&quot;)
+sdfset &lt;- read.SDFset(mypath)
+data(sdfsample)
+sdfsample
+plot(sdfsample[1:4], print=FALSE)</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
