--- a/title-checker.html
+++ b/title-checker.html
@@ -1151,16 +1151,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
 <hr/>
 <p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolsOverview - Analysis Tools for Longevity Research".</p>
 
@@ -3815,7 +3805,7 @@
 
 
 <hr/>
-<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eDRUG - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+<p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools - Connecting Drug- and Age-related Gene Expression Signatures".</p>
 
 
 
