--- a/title-checker.html
+++ b/title-checker.html
@@ -1161,8 +1161,134 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityToolsOverview - Analysis Tools for Longevity Research".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1475,8 +1601,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Overview of object clases, methods and functions" does not match the page title "Overview of object clases, methods and functions".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1789,6 +1943,20 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Funding" does not match the page title "Funding".</p>
 
@@ -1946,8 +2114,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "6. Version information" does not match the page title "Version information".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -2286,8 +2482,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools_eQTL - eQTL, eSNP and GWAS Analysis".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -2600,8 +2824,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Getting Started" does not match the page title "Getting Started".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -2914,8 +3166,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Sample data from GTEx" does not match the page title "Sample data from GTEx".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -3228,8 +3508,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "7. SNP clumping using PLINK" does not match the page title "SNP clumping using PLINK".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -3542,8 +3850,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "9. Version information" does not match the page title "Version information".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -3814,8 +4150,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "1. Introduction" does not match the page title "longevityTools - Connecting Drug- and Age-related Gene Expression Signatures".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -4128,8 +4492,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "3. Setup of working environment" does not match the page title "Setup of working environment".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -4442,8 +4834,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "5. Pre-processing of CEL files" does not match the page title "Pre-processing of CEL files".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -4756,8 +5176,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "7. Connectivity maps enrichment analysis" does not match the page title "Connectivity maps enrichment analysis".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -5070,8 +5518,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "9. Age-disease network analysis" does not match the page title "Age-disease network analysis".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -5384,8 +5860,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "11. Version information" does not match the page title "Version information".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -5807,8 +6311,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <hr/>
 <p>Problem: The sidebar item title "2. Getting Started" does not match the page title "Getting Started".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -6121,149 +6653,6 @@
 
 
 
-<hr/>
-<p>Problem: The sidebar item title "4. Funding" does not match the page title "Funding".</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -6279,7 +6668,21 @@
 
 
 <hr/>
-<p>Problem: The sidebar item title "5. Version information" does not match the page title "Version information".</p>
+<p>Problem: The sidebar item title "4. Query database" does not match the page title "Query database".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -6436,7 +6839,375 @@
 
 
 <hr/>
-<p>Problem: The sidebar item title "6. References" does not match the page title "References".</p>
+<p>Problem: The sidebar item title "5. Funding" does not match the page title "Funding".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<hr/>
+<p>Problem: The sidebar item title "6. Version information" does not match the page title "Version information".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<hr/>
+<p>Problem: The sidebar item title "7. References" does not match the page title "References".</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
