--- a/vignettes/longevityTools_eQTL.html
+++ b/vignettes/longevityTools_eQTL.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: eQTL, eSNP and GWAS Analysis</h1>
 <h4 class="author"><em>Author: Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 13 October, 2016</em></h4>
+<h4 class="date"><em>Last update: 14 October, 2016</em></h4>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.6</span></h4>
 
@@ -188,9 +188,9 @@ dat_effect&lt;-fread(&quot;~/bigdata/GTEx/GTEx_Analysis_v6p_eQTL/Whole_Blood_Ana
 
 sood&lt;-fread(&quot;~/U24/MR/GTEx/data/sood150.csv&quot;)
 sood&lt;-sood[!duplicated(Gene_Symbol),]
+sood &lt;- sood[HU133_Probeset_ID!=Gene_Symbol , ]
 setnames(sood,&quot;Y:0_muscle&quot;,&quot;young_old_muscle&quot;)
 query_genes&lt;-sood[,Gene_Symbol]
-
 
 dat_effect[gene_name %in% query_genes,.N] #121 gene matches
 dat_effect&lt;-merge(dat_effect,sood,by.x=&quot;gene_name&quot;,by.y=&quot;Gene_Symbol&quot; )
@@ -203,6 +203,11 @@ dat_effect[nchar(ref)&gt;1 | nchar(alt)&gt;1,.N]
 #dat_effect[nchar(ref)&gt;1 | nchar(alt)&gt;1 , KGID:=paste0(chr,&quot;:&quot;,snp_pos,&quot;[b37]&quot;,ref,&quot;,&quot;,alt )  ]
 #remove indels since they don't merge with my 1KG data anyway
 dat_effect &lt;- dat_effect[nchar(ref)==1 &amp; nchar(alt)==1,]
+#count non-sig eSNPs
+dat_effect[qval&gt;0.05 ,.N] #78
+dat_effect[pval_nominal&gt;pval_nominal_threshold,.N] #64
+dat_effect[pval_perm&gt;0.05 ,.N] #74
+dat_effect[pval_perm&gt;0.05 &amp; pval_nominal&lt;pval_nominal_threshold,.(pval_nominal,pval_nominal_threshold,pval_perm)]
 #convert up down to + and -
 setnames(dat_effect,c(&quot;alt&quot;,&quot;ref&quot;),c(&quot;effect_allele&quot;,&quot;non_effect_allele&quot;))
 dat_effect[young_old_muscle==&quot;up&quot;,young_old_muscle:=&quot;1&quot;]
@@ -216,7 +221,7 @@ dat_effect[(young_old_muscle*slope)&lt;0 , effect_allele:=temp_non_effect_allele
 dat_effect[(young_old_muscle*slope)&lt;0 , non_effect_allele:=temp_effect_allele  ]
 
 dat_effect[ ,effect:=slope ]
-#dat_effect &lt;- dat_effect[,.(KGID,gene_name,effect_allele,non_effect_allele,rs_id_dbSNP142_GRCh37p13,maf,slope,effect,pval_nominal,qval,young_old_muscle )]
+#dat_effect &lt;- dat_effect[,.(KGID,gene_name,effect_allele,non_effect_allele,rs_id_dbSNP142_GRCh37p13,maf,slope,effect,pval_nominal,qval,pval_nominal_threshold,young_old_muscle )]
 dat_effect &lt;- dat_effect[,.(KGID,effect_allele,non_effect_allele,effect ) ]
 
 #try merging SNPs with my 1KG data. If Indels don't merge, I'll deal with them later.
@@ -293,13 +298,6 @@ pheno[control60dead==1 ,dead90:=0L ]
 pheno[cases90==1 ,dead90:=1L ]
 pheno[dead90==-9 ,dead90:=NA ] 
 L1&lt;-glm(dead90 ~ IV + GIAGE1 + factor(SITE) + EV1 + EV2 + EV3 + EV4 ,data=pheno, family=binomial(link=&quot;logit&quot;), maxit=50 , na.action=na.omit )
-summary(L1)
-
-pheno[ ,dead90:=-9L ]
-pheno[control60DA==1 ,dead90:=0L ]
-pheno[cases90==1 ,dead90:=1L ]
-pheno[dead90==-9 ,dead90:=NA ] 
-L1&lt;-glm(dead90 ~ IV + GIAGE1 + EV1 + EV2 + EV3 + EV4 ,data=pheno, family=binomial(link=&quot;logit&quot;), maxit=50  )
 summary(L1)
 
 #survival
