--- a/vignettes/longevityTools_SNPformat.html
+++ b/vignettes/longevityTools_SNPformat.html
@@ -738,8 +738,75 @@ fwrite(map2, file.path=paste0(&quot;~/bigdata/U24/GWAScohorts/MrOS/plink1KG/chr&
 fwrite(dat, file.path=paste0(&quot;~/bigdata/U24/GWAScohorts/MrOS/plink1KG/chr&quot;,myChr,&quot;.plink.dose&quot;),sep=&quot;\t&quot;,col.names=FALSE, verbose=TRUE )</code></pre>
 </div>
 </div>
+<div id="phenotype-based-on-survival-percentiles" class="section level1">
+<h1><span class="header-section-number">8</span> Phenotype based on survival percentiles</h1>
+<div id="ssa-data" class="section level2">
+<h2><span class="header-section-number">8.1</span> SSA data</h2>
+<p>Birth cohort and gender-specific survival percentiles from the US Social Security Administration are provided in Table 7 <a href="http://www.ssa.gov/oact/NOTES/as120/TOC.html">here</a>. The age at the Xth survival percentile is the youngest age at which lx &lt;= (1-X)*100,000. For the 90th survival percentile, lx &lt;= 0.1*100,000 = 10,000.</p>
+</div>
+<div id="linear-predictor-for-each-year" class="section level2">
+<h2><span class="header-section-number">8.2</span> Linear predictor for each year</h2>
+<p>SSA data is given by decade. A linear predictor was used to impute age at each year.</p>
+<pre class="r"><code>dat&lt;-read.csv(&quot;~/Documents/longevity/1KGlongevity/ages.csv&quot;,header=T,stringsAsFactors=F)
+dat$birthYear&lt;-dat$birthYear - 1900
+
+myPredictor&lt;-function(x){
+  lm1&lt;-lm(x~birthYear,data=dat)
+  newdata&lt;-with(dat,expand.grid(
+    birthYear = seq(min(birthYear),max(birthYear),by=1 ),
+    age = 0
+  ))
+  newdata$age &lt;- round(predict(lm1,newdata))
+  return(newdata$age)
+}
+
+result&lt;-sapply(dat[,2:9],myPredictor)
+myBirthYear = seq(min(dat$birthYear),max(dat$birthYear),by=1 )+1900
+result&lt;-cbind(myBirthYear,result)
+write.csv(result,file=&quot;~/Documents/longevity/1KGlongevity/agesPredict.csv&quot;,quote=F,row.names=F)</code></pre>
+</div>
+<div id="apply-percentiles-to-follow-up-data" class="section level2">
+<h2><span class="header-section-number">8.3</span> Apply percentiles to follow-up data</h2>
+<pre class="r"><code>efDat&lt;-read.csv(&quot;M:/work/mrOS/dataPheno/endpoints/efaug15.csv&quot;,header=T,stringsAsFactors=F)
+V1dat&lt;-read.csv(&quot;M:/work/mrOS/dataPheno/V1FEB14.csv&quot;,header=T,stringsAsFactors=F)
+V1dat&lt;-V1dat[,c(&quot;ID&quot;,&quot;SITE&quot;,&quot;GIAGE1&quot;)]
+ageLUT&lt;-read.csv(&quot;M:/work/longevity/chargeAging/1KGlongevity/AP/lifetables/agesPredict.csv&quot;,header=T,stringsAsFactors=F)
+fam&lt;-read.table(&quot;M:/work/longevity/chargeAging/1KGlongevity/MrOS/data/chr21.plink.fam&quot;,header=F,stringsAsFactors = F)
+names(fam)&lt;-c(&quot;FID&quot;,&quot;IID&quot;,&quot;father&quot;,&quot;mother&quot;,&quot;sex&quot;,&quot;pheno&quot;)
+
+dat&lt;-merge(efDat,V1dat,by=&quot;ID&quot;)
+dat$EFDATE&lt;-as.Date(dat$EFDATE, format=&quot;%m/%d/%Y&quot;)
+dat$cohort&lt;-as.numeric(format(dat$EFDATE,&quot;%Y&quot;)) - dat$GIAGE1
+
+dat$finalAge&lt;-dat$GIAGE1 + dat$FUCYTIME
+
+#provides age cut-off based on birthyear cohort
+dat$male90cut&lt;-ageLUT[match(dat$cohort,ageLUT$myBirthYear),&quot;male90&quot;]
+dat$male99cut&lt;-ageLUT[match(dat$cohort,ageLUT$myBirthYear),&quot;male99&quot;]
+dat$male60cut&lt;-ageLUT[match(dat$cohort,ageLUT$myBirthYear),&quot;male60&quot;]
+#no missings, meaning there were matches for all birth cohorts.
+
+dat$cases90&lt;-0
+dat$cases90[dat$finalAge&gt;=dat$male90cut]&lt;-1
+
+dat$cases99&lt;-0
+dat$cases99[dat$finalAge&gt;=dat$male99cut]&lt;-1
+
+dat$control60dead&lt;-0
+dat$control60dead[dat$EFSTATUS==1 &amp; dat$finalAge&lt;=dat$male60cut] &lt;-1
+
+dat$control60alive&lt;-0
+dat$control60alive[dat$EFSTATUS!=1 &amp; dat$finalAge&lt;=dat$male60cut] &lt;-1
+
+dat$control60DA&lt;-0
+dat$control60DA[dat$finalAge&lt;=dat$male60cut] &lt;-1
+
+#output data for all MrOS subjects, even those without GWAS
+write.csv(dat,file=&quot;M:/work/longevity/chargeAging/1KGlongevity/MrOS/data/MrOSsurvivalPercentiles.csv&quot;,row.names=F,quote=F)</code></pre>
+</div>
+</div>
 <div id="association-analysis" class="section level1">
-<h1><span class="header-section-number">8</span> Association analysis</h1>
+<h1><span class="header-section-number">9</span> Association analysis</h1>
 <p>Run analysis using PLINK</p>
 <pre><code>#!/bin/bash
 
